--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,10 +18,12 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/img_1"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="@dimen/size_main_button_medium"
+            android:layout_height="@dimen/size_main_button_medium"
             android:background="@drawable/bg_circle"
-            android:src="@drawable/ic_restore"
+            android:src="@drawable/refresh"
+            android:tint="@color/colorWhite"
+            android:padding="3dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -82,6 +84,7 @@
         android:src="@drawable/ic_close"
         android:layout_marginBottom="@dimen/margin_main"
         android:backgroundTint="@color/colorOrange"
+        android:padding="5dp"
         />
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -96,18 +99,21 @@
         android:layout_marginEnd="@dimen/margin_main"
         android:layout_marginBottom="@dimen/margin_main"
         android:backgroundTint="@color/colorGreen"
+        android:padding="5dp"
         />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/btn_restore"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="@dimen/size_main_button_medium"
+        android:layout_height="@dimen/size_main_button_medium"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/btn_skip"
         app:layout_constraintBottom_toBottomOf="@id/btn_skip"
         android:background="@drawable/bg_circle"
-        android:src="@drawable/ic_restore"
+        android:src="@drawable/refresh"
+        android:tint="@color/colorWhite"
+        android:padding="3dp"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
