--- a/app/src/main/res/layout/view_trash_item.xml
+++ b/app/src/main/res/layout/view_trash_item.xml
@@ -79,9 +79,11 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/img_icon_1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_restore"
+            android:layout_width="@dimen/size_item_icon"
+            android:layout_height="@dimen/size_item_icon"
+            android:src="@drawable/refresh"
+            android:tint="@color/colorWhite"
+            android:padding="3dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -118,9 +120,11 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/img_icon_2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_restore"
+            android:layout_width="@dimen/size_item_icon"
+            android:layout_height="@dimen/size_item_icon"
+            android:src="@drawable/trashcan"
+            android:tint="@color/colorWhite"
+            android:padding="2dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
