--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             android:layout_width="@dimen/size_main_button_medium"
             android:layout_height="@dimen/size_main_button_medium"
             android:background="@drawable/bg_circle"
-            android:src="@drawable/refresh"
+            android:src="@drawable/img_refresh"
             android:tint="@color/colorWhite"
             android:padding="3dp"
             app:layout_constraintTop_toTopOf="parent"
@@ -56,7 +56,7 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="@dimen/margin_main"
         android:layout_marginStart="@dimen/margin_main"
-        android:src="@drawable/trashcan"
+        android:src="@drawable/ic_delete_2"
         android:tint="@color/colorGray"
         android:visibility="gone"
         />
@@ -113,7 +113,7 @@
         app:layout_constraintTop_toTopOf="@id/btn_skip"
         app:layout_constraintBottom_toBottomOf="@id/btn_skip"
         android:background="@drawable/bg_circle"
-        android:src="@drawable/refresh"
+        android:src="@drawable/img_refresh"
         android:tint="@color/colorWhite"
         android:padding="3dp"
         android:elevation="@dimen/elevation_main"
