--- a/app/src/main/res/layout/view_trash_item.xml
+++ b/app/src/main/res/layout/view_trash_item.xml
@@ -81,9 +81,9 @@
             android:id="@+id/img_icon_1"
             android:layout_width="@dimen/size_item_icon"
             android:layout_height="@dimen/size_item_icon"
-            android:src="@drawable/refresh"
+            android:src="@drawable/img_refresh"
             android:tint="@color/colorWhite"
-            android:padding="3dp"
+            android:padding="2dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -122,9 +122,9 @@
             android:id="@+id/img_icon_2"
             android:layout_width="@dimen/size_item_icon"
             android:layout_height="@dimen/size_item_icon"
-            android:src="@drawable/trashcan"
+            android:src="@drawable/ic_delete_3"
             android:tint="@color/colorWhite"
-            android:padding="2dp"
+            android:padding="2.53dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
