--- a/app/src/main/res/layout/activity_license.xml
+++ b/app/src/main/res/layout/activity_license.xml
@@ -45,7 +45,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -82,7 +83,9 @@
                 android:id="@+id/layout_license_1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="gone">
+                android:layout_marginStart="@dimen/margin_main"
+                android:layout_marginEnd="@dimen/margin_main"
+                android:visibility="visible">
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:layout_width="wrap_content"
@@ -130,7 +133,9 @@
                 android:id="@+id/layout_license_2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="gone">
+                android:layout_marginStart="@dimen/margin_main"
+                android:layout_marginEnd="@dimen/margin_main"
+                android:visibility="visible">
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:layout_width="wrap_content"
